--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -32,8 +32,8 @@ img {
 @import "code_normal.styl"
 /* 手写代码高亮 */
 
-@import "block.css"
-@import "tool.css"
-@import "font.css"
+@import "block.styl"
+@import "tool.styl"
+@import "font.styl"
 @import "paper.styl"
 /* 正文样式 */
