--- a/source/css/font.styl
+++ b/source/css/font.styl
@@ -13,7 +13,7 @@ body {
 code {
   /* 行间代码 */
   font-family: monospace;
-  font-size: large;
+  font-size: inhert;
   word-break: break-all;
   background-color: var(--code_grey);
 }
