删除摘要功能

--- a/source/css/font.styl
+++ b/source/css/font.styl
@@ -48,6 +48,20 @@ code {
   text-decoration: none;
 }
 
+.post_excerpt {
+  /* 主页的文章摘要 */
+  height: 180px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.post_excerpt h1,
+.post_excerpt h2,
+.post_excerpt h3,
+.post_excerpt h4,
+.post_excerpt h5 {
+  font-size: large;
+}
 
 #post_name {
   /* 内容页 */
